--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,5 +4,6 @@
         "--proto_path=${workspaceRoot}/src",
         "--proto_path=${workspaceRoot}/dfhack-protos"
       ]
-  }
+  },
+  "debug.node.autoAttach": "on"
 }
